<resources>
    <string name="app_name">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="explore_screen">Explore Screen</string>
    <string name="hello_dynamic_content">hello dynamic content</string>
    <string name="open" />
    <string name="select_class">Select a Class</string>

    <string name="close" />
    <string name="insects">Insects</string>
    <string name="fruits">Fruits</string>
    <string name="flowers">Flowers</string>
    <string name="animals">Animals</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="app_language">App Language</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="app_version">App Version: 1.0.0</string>
    <string name="help_support">Help and Support</string>
    <string name="logout">Logout</string>
    <string name="GrowWise">GrowWise\n</string>
    <string name="rhymes">rhymes</string>
    <string name="quizes">quizes</string>
    <string name="trainings">trainings</string>
    <string name="no_stories_available">no_stories_available\n</string>
    <string name="retry">retry\n</string>
    <string name="no_stories_found">No Stories Found</string>
    <string name="story_thumbnail">Story Thumbnail</string>
    <string name="ABCDLearning">ABCD Phonics Learning</string>
    <string name="no_content_available">no_content_avilabel\n</string>
    <string name="error_loading_content">erro loading content4\n</string>
</resources>